--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "challenge 5",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon server/index.ts"
+    "test": "jest --detectOpenHandles",
+    "start": "nodemon server/indexListen.ts",
+    "lint": "eslint --fix ."
   },
   "author": "",
   "license": "ISC",
@@ -20,15 +21,14 @@
     "objection": "^3.1.2",
     "openapi": "^1.0.1",
     "pg": "^8.11.3",
-    "redis": "^4.6.10",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.0",
-    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
@@ -38,11 +38,21 @@
     "@types/pg": "^8.10.9",
     "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.16",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
+    "@types/yamljs": "^0.2.34",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
