--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --detectOpenHandles",
     "start": "nodemon server/indexListen.ts",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "deploy": "fly deploy "
   },
   "author": "",
   "license": "ISC",
@@ -14,19 +15,24 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "objection": "^3.1.2",
     "openapi": "^1.0.1",
     "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -49,10 +55,7 @@
     "eslint-plugin-n": "^16.5.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.1"
   }
 }
