--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.2",
     "moedim": "^0.5.0",
+    "netlify-cli": "^17.10.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
