chore(backend): add FLY_API_Token

--- a/.github/workflow/backend.yml
+++ b/.github/workflow/backend.yml
@@ -2,7 +2,7 @@ name: fly deploy
 on:
   push:
     branches:
-      - main
+      - "**"
 jobs:
   deploy:
     name: deploy fly.io
@@ -14,3 +14,5 @@ jobs:
       - uses: action/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
