chore(backend): fix ci cd

--- a/.github/workflow/backend.yml
+++ b/.github/workflow/backend.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubunru-latest
     defaults:
       run:
-        working-directory: "backend"
+        working-directory: "./backend"
     steps:
       - uses: action/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
