--- a/.github/workflow/backend.yml
+++ b/.github/workflow/backend.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: deploy fly.io
-    runs-on: ubunru-latest
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: "./backend"
